--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
-    "@copilotkit/react-core": "^1.0.0", // Replace with actual version
-    "@copilotkit/react-ui": "^1.0.0"     // Replace with actual version
+    "@copilotkit/react-core": "^1.0.0", // Replace with actual version if needed
+    "@copilotkit/react-ui": "^1.0.0"     // Replace with actual version if needed
   },
   "scripts": {
     "start": "react-scripts start",
