--- a/package.json
+++ b/package.json
@@ -1,36 +1,41 @@
 {
-  "name": "myaiassistant",
-  "version": "1.0.0",
+  "name": "my-ai-assistant",
+  "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "@copilotkit/react-core": "^1.0.0", // Replace with actual version if needed
-    "@copilotkit/react-ui": "^1.0.0"     // Replace with actual version if needed
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@copilotkit/react-core": "^1.1.0",
+    "@copilotkit/react-ui": "^1.1.0",
+    "@copilotkit/runtime-client-gql": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.6",
+    "groq-sdk": "^0.5.0",
+    "lucide-react": "^0.445.0",
+    "next": "14.2.13", 
+    "react": "^18", 
+    "react-dom": "^18", 
+    "tailwind-merge": "^2.5.2", 
+    "tailwindcss-animate": "^1.0.7"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/node": "^20", 
+    "@types/react": "^18", 
+    "@types/react-dom": "^18", 
+    "postcss": "^8", 
+    "tailwindcss": "^3.4.1", 
+    "typescript": "^5" 
   }
 }
